--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,33 @@
-fastapi
-uvicorn[standard]
-qrcode[pil]
-requests
+#fastapi
+#uvicorn[standard]
+#qrcode[pil]
+#requests
+annotated-types==0.5.0
+anyio==3.7.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.6
+exceptiongroup==1.1.2
+fastapi==0.101.0
+greenlet==0.4.13
+h11==0.14.0
+hpy==0.0.4
+httptools==0.6.0
+idna==3.4
+Pillow==10.0.0
+pydantic==2.1.1
+pydantic_core==2.4.0
+pypng==0.20220715.0
+python-dotenv==1.0.0
+PyYAML==6.0.1
+qrcode==7.4.2
+readline==6.2.4.1
+requests==2.31.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.7.1
+urllib3==2.0.4
+uvicorn==0.23.2
+watchfiles==0.19.0
+websockets==11.0.3
